--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "formik": "^2.4.5",
+        "framer-motion": "^11.11.17",
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
