--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-hook-form": "^7.51.3",
         "react-multi-carousel": "^2.8.5",
         "react-slick": "^0.30.2",
+        "react-wavify": "^1.11.1",
         "sass": "^1.72.0",
         "slick-carousel": "^1.8.1"
     },
