--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "cloudinary": "^1.41.3",
         "formik": "^2.4.5",
         "framer-motion": "^11.11.17",
         "js-cookie": "^3.0.5",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
         "react-cookie": "^7.1.4",
