--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "cloudinary": "^1.41.3",
+        "date-fns": "^4.1.0",
         "formik": "^2.4.5",
         "framer-motion": "^11.11.17",
         "js-cookie": "^3.0.5",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "react": "^18.2.0",
+        "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-cookie": "^7.1.4",
+        "react-date-range": "^2.0.1",
         "react-dom": "^18.2.0",
         "react-form-validator-core": "^1.1.2",
         "react-hook-form": "^7.51.3",
